# ConLogParser

./: CMakeLists.txt
cmake/: CompilerOptions.cmake
include/conlog/: App.hpp
include/conlog/core/: Dispatcher.hpp  FileWatcher.hpp  LineBuffer.hpp  ProcessGuard.hpp
include/conlog/events/: EventBus.hpp  Events.hpp
include/conlog/parser/: ParserConcept.hpp  ParserRegistry.hpp
include/conlog/parser/parsers/: ChatParser.hpp  DamageParser.hpp  KillDeathParser.hpp  NoscopeParser.hpp  PlayerConnectedParser.hpp  StickyNadesParser.hpp  SuicideParser.hpp
src/: App.cpp  CMakeLists.txt  ChatParser.cpp  DamageParser.cpp  Dispatcher.cpp  EventBus.cpp  FileWatcher.cpp  KillDeathParser.cpp  LineBuffer.cpp  NoscopeParser.cpp  ParserRegistry.cpp  PlayerConnectedParser.cpp  ProcessGuard.cpp  StickyNadesParser.cpp  SuicideParser.cpp  main.cpp
